plugins {
    id "java-library"
    id "io.spring.dependency-management" version "1.1.3"
    id "org.springframework.boot" version "3.1.3"
}

java {
    sourceCompatibility = JavaVersion.VERSION_17
    targetCompatibility = JavaVersion.VERSION_17
}

compileJava.options.encoding = "UTF-8"
compileTestJava.options.encoding = "UTF-8"

springBoot {
    mainClass = "cherry.apigateway.Main"
}

test {
    useJUnitPlatform()
}

repositories { mavenCentral() }

dependencyManagement {
    imports {
        mavenBom "org.springframework.boot:spring-boot-dependencies:3.1.3"
        mavenBom "org.springframework.cloud:spring-cloud-dependencies:2022.0.4"
        mavenBom "com.azure.spring:spring-cloud-azure-dependencies:5.5.0"
    }
    dependencies {
        dependency "org.apache.commons:commons-collections4:4.4"
    }
}

dependencies {
    implementation "org.apache.commons:commons-collections4"
    implementation "org.springframework.boot:spring-boot-starter"
    implementation "org.springframework.boot:spring-boot-starter-webflux"
    implementation "org.springframework.boot:spring-boot-starter-security"
    implementation "org.springframework.boot:spring-boot-starter-oauth2-resource-server"
    implementation "org.springframework.cloud:spring-cloud-starter-gateway"
    implementation "com.azure.spring:spring-cloud-azure-starter-active-directory-b2c"
    runtimeOnly "org.springframework.boot:spring-boot-starter-aop"
    runtimeOnly "org.springframework.boot:spring-boot-starter-actuator"
    testImplementation "org.springframework.boot:spring-boot-starter-test"
}
